--- a/index.html
+++ b/index.html
@@ -32,10 +32,18 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="qa-scenario" class="anchor" href="#qa-scenario" aria-hidden="true"><span class="octicon octicon-link"></span></a>QA Scenario</h3>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>Test the FixtureFinder page in Chrome (desktop)
+You’ll work alone.
+The dev team is not co-located &amp; in a different time zone.</p>
+
+<p>You have 30 minutes. Then the dev team will start working.</p>
+
+<p><a href="http://rest-accachallenge.rhcloud.com/resources/fixture-finder/html/FixtureFinder.html">System Under Test</a>
+<a href="https://github.com/EmbeddedTestingWorkshop/QA_FixtureFinder/issues">Bug Tracking</a></p>
+
+<p>If you don't have a Github account yet, quickly create one <a href="https://github.com/join">here</a> or use the generic account for the workshop EmbeddedTester.</p>
 
 <p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
       </section>
