Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
         <h3>
 <a id="qa-scenario" class="anchor" href="#qa-scenario" aria-hidden="true"><span class="octicon octicon-link"></span></a>QA Scenario</h3>
 
-<p>Test the FixtureFinder page in Chrome (desktop)
-You’ll work alone.
-The dev team is not co-located &amp; in a different time zone.</p>
+<p>Test the FixtureFinder page in Chrome (desktop)</p>
+
+<p>You’ll work alone.</p>
+
+<p>The dev team is not co-located &amp; in a different time zone.</p>
 
 <p>You have 30 minutes. Then the dev team will start working.</p>
 
-<p><a href="http://rest-accachallenge.rhcloud.com/resources/fixture-finder/html/FixtureFinder.html">System Under Test</a>
-<a href="https://github.com/EmbeddedTestingWorkshop/QA_FixtureFinder/issues">Bug Tracking</a></p>
+<p><a href="http://rest-accachallenge.rhcloud.com/resources/fixture-finder/html/FixtureFinder.html">System Under Test</a></p>
+
+<p><a href="https://github.com/EmbeddedTestingWorkshop/QA_FixtureFinder/issues">Bug Tracking</a></p>
 
 <p>If you don't have a Github account yet, quickly create one <a href="https://github.com/join">here</a> or use the generic account for the workshop EmbeddedTester.</p>
 
