--- a/index.html
+++ b/index.html
@@ -1,66 +1,71 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Coders to the left, Testers to the right : Embedded Agile Testing">
+    <title>Coders to the left, Testers to the right by EmbeddedTestingWorkshop</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Coders to the left, Testers to the right</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/EmbeddedTestingWorkshop/Info">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/EmbeddedTestingWorkshop/Info/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/EmbeddedTestingWorkshop/Info/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/EmbeddedTestingWorkshop/Info">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">Coders to the left, Testers to the right</h1>
-          <h2 id="project_tagline">Embedded Agile Testing</h2>
+      <section>
+        <div id="title">
+          <h1>Coders to the left, Testers to the right</h1>
+          <p>Embedded Agile Testing</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/EmbeddedTestingWorkshop">EmbeddedTestingWorkshop</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/EmbeddedTestingWorkshop/Info/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/EmbeddedTestingWorkshop/Info/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+        <h1>
+<a id="qa-scenario" class="anchor" href="#qa-scenario" aria-hidden="true"><span class="octicon octicon-link"></span></a>QA Scenario</h1>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="qa-scenario" class="anchor" href="#qa-scenario" aria-hidden="true"><span class="octicon octicon-link"></span></a>QA Scenario</h3>
-
-<p>Test the FixtureFinder page in Chrome (desktop)</p>
-
-<p>You’ll work alone.</p>
-
-<p>The dev team is not co-located &amp; in a different time zone.</p>
-
-<p>You have 30 minutes. Then the dev team will start working.</p>
+<p>Test the FixtureFinder page in Chrome (desktop). You’ll work alone. The dev team is not co-located &amp; in a different time zone.
+You have 30 minutes. Then the dev team will start working.</p>
 
 <p><a href="http://rest-accachallenge.rhcloud.com/resources/fixture-finder/html/FixtureFinder.html">System Under Test</a></p>
 
 <p><a href="https://github.com/EmbeddedTestingWorkshop/QA_FixtureFinder/issues">Bug Tracking</a></p>
 
-<p>If you don't have a Github account yet, quickly create one <a href="https://github.com/join">here</a> or use the generic account for the workshop EmbeddedTester.</p>
+<p>If you don't have a Github account yet, quickly create one <a href="https://github.com/join">here</a> or use the generic account for the workshop    EmbeddedTester    </p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<hr>
+
+<h1>
+<a id="embedded-scenario" class="anchor" href="#embedded-scenario" aria-hidden="true"><span class="octicon octicon-link"></span></a>Embedded Scenario</h1>
+
+<p><a href="https://github.com/EmbeddedTestingWorkshop/Embedded_FixtureFinder">Github for Embedded Scenario</a></p>
+
+<p><a href="https://docs.google.com/presentation/d/1VxxzyMwlfwGtG7ktVwjGBms2t4ySDDCJ1gXFAoDyGWo/">How to setup Google Dev Tools</a></p>
+
+<p><a href="https://drive.google.com/folderview?id=0B2Rm2EYEiEkffmN4WTU2ak9GUi16dnU5VHhQWUhKVWJGejIzNGFodWxwLXR3eTFYeWJEeFU">Google Drive to upload your solution</a></p>
+
+<p>If you don't have a gooogle account, you can use the generic one    <a href="mailto:EmbeddedTesterWorkshop@gmail.com">EmbeddedTesterWorkshop@gmail.com</a>    </p>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Coders to the left, Testers to the right maintained by <a href="https://github.com/EmbeddedTestingWorkshop">EmbeddedTestingWorkshop</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
