Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ You have 30 minutes. Then the dev team will start working.</p>
 
 <p><a href="https://docs.google.com/presentation/d/1VxxzyMwlfwGtG7ktVwjGBms2t4ySDDCJ1gXFAoDyGWo/">How to setup Google Dev Tools</a></p>
 
-<p><a href="https://drive.google.com/folderview?id=0B2Rm2EYEiEkffmN4WTU2ak9GUi16dnU5VHhQWUhKVWJGejIzNGFodWxwLXR3eTFYeWJEeFU">Google Drive to upload your solution</a></p>
+<p><a href="https://drive.google.com/folderview?id=0B2Rm2EYEiEkffmN4WTU2ak9GUi16dnU5VHhQWUhKVWJGejIzNGFodWxwLXR3eTFYeWJEeFU">Use Google Drive to upload your solution</a></p>
 
 <p>If you don't have a gooogle account, you can use the generic one    <a href="mailto:EmbeddedTesterWorkshop@gmail.com">EmbeddedTesterWorkshop@gmail.com</a>    </p>
 
